updating link to surveys

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,16 +1,16 @@
 ---
-title: "Intro to R, 2019 Spring"
-author: "John Little & Joel Herndon"
+title: "Intro to R"
+author: "John Little"
 date: "`r Sys.Date()`"
 output: github_document
 ---
 <!-- Edit the README.Rmd.  Readme.md is auto genererated --> 
 
-README
-======
+## README
 
+### Links
 
-- Repo  
+- Repo / Code
 
     - https://is.gd/intro2r_2019spring
     
@@ -20,12 +20,12 @@ README
 
 - Surveys
 
-    - [Pre-survey](https://docs.google.com/forms/d/e/1FAIpQLSdtAb8OFb8ii2_5o6z0a_m8P-Owa0Bh4N4ouhLUZ3RJ7KbAiA/viewform)
-    - [Questions during workshop](https://docs.google.com/document/d/162S6yinlPCo3azRhvaSJckj_8c2g7Bf-_B5wZ-xIHqI/edit?usp=sharing) 
-    - [Post-Survey](https://docs.google.com/forms/d/e/1FAIpQLSdczFPtCOfQxXTF14gje2NN3B5y0IR1SutLQe_oeQawHE5k5A/viewform)
+    - [Pre-survey](https://forms.gle/JNtwTQR3Jvk65Xev5)
+    - [Post-Survey](https://forms.gle/Mwnm7ET8WPDi2Bic9)
+    - Questions during workshop 
 
 
-License
--------
+### License
+
 
 Shareable via Creative Commons: [CC-BY-NC](https://creativecommons.org/licenses/by-nc/4.0/)<br> !["CC BY-NC"](images/by-nc.png){height=30px}
