--- a/exercise_00.Rmd
+++ b/exercise_00.Rmd
@@ -1,7 +1,12 @@
 ---
-title: "Exercise 2"
+title: "Exercise 0"
 output: html_notebook
 ---
+
+Goals:  
+
+- Open a Notebook
+- Import a dataset using `reader::read_csv()`
 
 ## Directions
 
@@ -17,18 +22,3 @@ For the workshop, we've prebuilt a data set that has information about menus in 
 
 1. Using what you've seen in class, if `data/brodheadCenter.csv` is a CSV (comma separated values) file, how would you load the file into a new object called `brodhead`?
 
-2. What is the data structure of the `brodhead`?
-
-3. Take a look at the structure of the `brodhead` object.
-    - How many observations (rows) are there?
-    - How many variables (columns) are there?
-    - How many of the variables are numeric data?
-    
-## Answers
-
-See the [answers](answers.Rmd) 
-
-
-## Quiz
-
-Take the [interactive quizes](https://libjohn.shinyapps.io/intro2r_quizzes/)
