--- a/exercise_01.Rmd
+++ b/exercise_01.Rmd
@@ -2,7 +2,21 @@
 title: "Exercise 1"
 ---
 
+## Goals:  
+
+Use dplyr functions to wrangle data
+
+In this exercise you'll practice the `dplyr` verbs (i.e. *functions*) mentioned in the demonstration.
+
+- `arrange()`
+- `filter()`
+- `mutate()`
+- `select()`
+- `count()`
+
 ## Directions
+
+**Repeating** from the excercise_00.Rmd...
 
 For the workshop, we've prebuilt a data set that has information about menus in Duke's Brodhead Center from three restaurants.  With the instructor, create a new R Notebook, load the *tidyverse* package, and **load the dining hall dataset**, *as a tibble*.
 
@@ -13,15 +27,11 @@ For the workshop, we've prebuilt a data set that has information about menus in 
 
     - Remember to assign the imported data to an object name, e.g. "brodhead"
     
+## BEGIN
+    
 1. Now you are ready to make new code chunks and follow the steps in Exercise 1 (below).
 
-In this exercise you'll practice the `dplyr` verbs (i.e. *functions*) mentioned in the demonstration.
-
-- `arrange()`
-- `filter()`
-- `mutate()`
-- `select()`
-- `count()`
+> Remember:  Answers can be found in the answer.Rmd file
 
 
 ## Exercise:  Data Wrangling
