UPDATE FORM LINKS

--- a/README.Rmd
+++ b/README.Rmd
@@ -14,17 +14,15 @@ output: github_document
 
     - https://github.com/libjohn/intro2r-code
     
-    - Rstudio.cloud:   https://is.gd/gentler
-    
 - Slides - https://rfun.library.duke.edu/intro2r/slides
 
 - Video - https://youtu.be/NtfHcNlwSEY
 
 - Surveys
 
-    - [Pre-survey](https://forms.gle/JNtwTQR3Jvk65Xev5)
-    - [Post-Survey](https://forms.gle/Mwnm7ET8WPDi2Bic9)
-    - Questions during workshop 
+    - [Pre-survey](https://forms.gle/2TFpaLbB6KSXGhsi9)
+    - [Questions DURING workshop](https://docs.google.com/document/d/1bToe1XxULs_VJYMXVBJ-Fk5AJRHVRyOxQ3PVnYVe3jg/edit?usp=sharing)
+    - [Post-Survey](https://forms.gle/915TJZ731cctopHs8)
 
 
 ### License
