--- a/urls_for_class.Rmd
+++ b/urls_for_class.Rmd
@@ -15,7 +15,7 @@ output: github_document
 
 -	[Pre-Survey](https://forms.gle/2TFpaLbB6KSXGhsi9) 
 -	[Questions DURING workshop](https://docs.google.com/document/d/1bToe1XxULs_VJYMXVBJ-Fk5AJRHVRyOxQ3PVnYVe3jg/edit?usp=sharing)
--	[Post Survey](https://forms.gle/915TJZ731cctopHs8)
+-	[Post Survey](https://forms.gle/eB6SeDbCFRTmR8tq6)
 
 ### R Primers
 
