--- a/README.Rmd
+++ b/README.Rmd
@@ -20,9 +20,9 @@ output: github_document
 
 - Surveys
 
-    - [Pre-survey](https://forms.gle/2TFpaLbB6KSXGhsi9)
-    - [Questions DURING workshop](https://docs.google.com/document/d/1bToe1XxULs_VJYMXVBJ-Fk5AJRHVRyOxQ3PVnYVe3jg/edit?usp=sharing)
-    - [Post-Survey](https://forms.gle/eB6SeDbCFRTmR8tq6)
+    - [Pre-survey](https://forms.gle/dhzW1iS7mrfG5RLUA)
+    - [Questions DURING workshop](https://docs.google.com/document/d/12jSpxo25xKaJClatcS2n2waRuKysCqkVvXQecStFnAk/edit?usp=sharing)
+    - [Post-Survey](https://forms.gle/X4DNmLmRUsTq7wvTA)
     
 ## Resources
 
