--- a/answers_01.Rmd
+++ b/answers_01.Rmd
@@ -1,49 +1,5 @@
 ---
-title: "Answers"
-date: "`r Sys.Date()`"
----
-
-## exercise 00:  
-
-Answers to steps 1 and 2 are desribed in the `00_import-data_literate-programming.Rmd` document.
-
-3. 
-
-```{r}
-library(tidyverse)
-```
-
-
-4.
-
-```{r}
-cars2 <- read_csv("data/cars2.csv")
-```
-
-
-5.
-
-```{r}
-cars2
-```
-
-
-6.
-
-```{r}
-starwars
-```
-
-
-```{r}
-starwars %>% 
-  ggplot(aes(fct_infreq(hair_color))) + 
-  geom_bar() + 
-  ggtitle("Hair Color Frequency of Star Wars Characters")
-```
-
-
-
+title: "Answers 01 - dplyr"
 ---
 
 Use the Brodhead Center prebuilt a dataset that has information about menus from three restaurants in Duke's dining hall.  
@@ -155,6 +111,3 @@ brodhead %>%
 brodhead %>% 
   count(menuType)
 ```
-
-
- 
