--- a/exercise_01.Rmd
+++ b/exercise_01.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Exercise 1"
+title: "Exercise 01 - dplyr -- data wrangling"
 ---
 
 ## Goals:  
@@ -16,25 +16,25 @@ In this exercise you'll practice the `dplyr` verbs (i.e. *functions*) mentioned 
 
 ## Directions
 
-**Repeating** from the excercise_00.Rmd...
+### Setup
 
-For the workshop, we've prebuilt a data set that has information about menus in Duke's Brodhead Center from three restaurants.  With the instructor, create a new R Notebook, load the *tidyverse* package, and **load the dining hall dataset**, *as a tibble*.
+We've prebuilt a data set that has information about menus in Duke's Brodhead Center (dining hall) from three restaurants.  Create a new R Notebook, load the *tidyverse* package, and **load the dining hall dataset**, *as a tibble*.  The broadhead dataset is a CSV file in the `data` directory.
 
 1. From the File menu, open a New R Notebook:  `File > New File > R Notebook`
-1. Reading the preloaded directions in your new script, add a code chunk at/around line 20.  (Hint: *Ctrl+Alt+I*)
-1. Load the `tidyverse` package.  In that code-chunk, type: `library(tidyverse)` and **run the code chunk**.
-1. Insert a code chunk and load the practice data:  `read_csv("data/brodheadCenter.csv")`
+2. Reading the preloaded directions in your new script, add a code chunk at/around line 20.  (Hint: *Ctrl+Alt+I*)
+3. Load the `tidyverse` package.  In that code-chunk, type: `library(tidyverse)` and **run the code chunk**.
+4. Insert a code chunk and load the practice data from the `data` directory:  
 
     - Remember to assign the imported data to an object name, e.g. "brodhead"
     
-## BEGIN
+**After loading a library package and importing data from above**
     
-1. Now you are ready to make new code chunks and follow the steps in Exercise 1 (below).
+Now you are ready to make new code chunks and follow the steps in Exercise 1 (below).
 
-> Remember:  Answers can be found in the answer.Rmd file
+> Remember:  Answers can be found in the answer_01.Rmd file
 
 
-## Exercise:  Data Wrangling
+### Exercise:  Data Wrangling
 
 All of the following questions are based on the sample of restaurants represented in the dataset which is accurate as of September 2, 2016.
 
