--- a/exercise_01.Rmd
+++ b/exercise_01.Rmd
@@ -44,7 +44,7 @@ All of the following questions are based on the sample of restaurants represente
 
 3. At the Brodhead Center, how many of the entrees (found in the `menuType` variable) cost eight dollars?
 
-4. The head of Duke dining is considering reducing prices at the Brodhead Center. Using what we've learned in class, write a line of code that will calculate a new variable (`halfPrice`) that contains items at half price.
+4. The head of Duke dining is considering reducing prices at the Brodhead Center. Using what we've learned in class, write code that will calculate a new variable (`halfPrice`) that contains items at half price.
 
 5. How many entrees are in the dataset (`menuType` variable)? How many desserts 
     
