ready for day 2

--- a/000_orientation_instructor-notes.Rmd
+++ b/000_orientation_instructor-notes.Rmd
@@ -26,3 +26,6 @@ cars$speed + 5
 
 ```
 
+The above is not an example of literate coding.  
+
+Next up....  R Markdown, R Notebooks, and literate coding.
