--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,7 @@ output: github_document
     
 ## Resources
 
-- [Rfun](https://library.duke.edu/rfun)
+- [Rfun](https://rfun.library.duke.edu/)
 - [Center for Data & Visualization Services](https://library.duke.edu/data/)
 - CDVS Email:  AskData@duke.edu
 - [RStudio Primers](https://rstudio.cloud/learn/primers/)
