--- a/exercise_00.Rmd
+++ b/exercise_00.Rmd
@@ -4,29 +4,45 @@ title: "Exercise 0"
 
 Goals:  
 
-- Open a Notebook
+- Create a R Notebook
 - Import a dataset using `reader::read_csv()`
+
+> ANSWER can be found in answers_00.Rmd file
 
 ## Directions
 
 For the workshop, we've prebuilt a data set that has information about menus in Duke's Brodhead Center from three restaurants.  
 
 1. From the File menu, open a New R Notebook:  `File > New File > R Notebook`
-1. Add a code chunk at/around line 20.  (Hint: *Ctrl+Alt+I*)
-1. Load the `tidyverse` package.  In that code-chunk, type: `library(tidyverse)` and **run the code chunk**.
-1. Now you are ready to make new code chunks and follow the steps in below.
+2. Add a code chunk at/around line 20.  (Hint: *Ctrl+Alt+I*)
+3. Load the `tidyverse` package.  In that code-chunk, type: `library(tidyverse)` and **run the code chunk**.
+4. Insert another new code chunks and follow the steps in below.
 
 
 ## Exercise: Data Structures & Vector Types
 
-1. Using what you've seen in class, if `data/brodheadCenter.csv` is a CSV (comma separated values) file, how would you load the file into a new object called `brodhead`?
+5. Using what you've seen in class, if `data/brodheadCenter.csv` is a CSV (comma separated values) file, how would you load the file into a new object called `brodhead`?
 
-> ANSWER can be found in answers.Rmd file
+6. Make a code chunk and display your new `brodhead` data frame?
 
-2. What data structure is `brodhead`?
+7.  `starwars` is an on-board dataset that comes with the tidyverse.  Make a new code chunk and display that data.  
 
-3. Take a look at the structure of the `brodhead` object.
+8.  Copy and paste the following code into a new code chunk in your new file.  
+
+```{r}
+starwars %>% 
+  ggplot(aes(fct_infreq(hair_color))) + 
+  geom_bar() + 
+  ggtitle("Hair Color Frequency of Star Wars Characters")
+```
+
+BONUS
+
+9. Take a look at the structure of the `brodhead` object.
     - How many observations (rows) are there?
     - How many variables (columns) are there?
     - How many of the variables are numeric data?
+    
+    HINT:  You can use the `glimpse() function`
 
+> ANSWER can be found in answers_00.Rmd file
