--- a/000_orientation_instructor-notes.Rmd
+++ b/000_orientation_instructor-notes.Rmd
@@ -6,14 +6,21 @@ title: "Orientation / Instructor Notes"
 
 1. Ask students to create a blank new RStudio Project: "hello world"
 1. Create a Blank R Notebook (prose [w R Markdown] & code chunks)
-1. Insert Code Chunk and `library(tidyverse) ; library(fs)`
-1. fs::dir_create("data")  -- click New Folder ; data
-1. Insert Code Chunk and `write_csv(mpg, "data/mpg2.csv")`
-1. Insert Code Chunk and `mpg_2 <- read_csv("data/mpg2.csv")`
-1. Insert Code Chunk and `mpg_2`
 1. Save the file:  hello_notebook.Rmd
 1. Preview the file:  *Ctrl+Shift+K* 
-1. Click the "Open in Browser" button
+2. Insert Code Chunk and `library(tidyverse) ; library(fs)`
+2. fs::dir_create("data")  -- click New Folder ; data
+2. Insert Code Chunk and `write_csv(mpg, "data/mpg2.csv")`
+2. Insert Code Chunk and `mpg_2 <- read_csv("data/mpg2.csv")`
+2. Insert Code Chunk and `mpg_2`
+3. Save the file:  hello_notebook.Rmd
+3. Preview the file:  *Ctrl+Shift+K* 
+3. Click the "Open in Browser" button
+
+> Students should do exercise_00.Rmd (preview and open in browser)
+> Answers can be found in answers_00.Rmd
+
+## RStudio environment and R 
 
 
 ```{r}
@@ -40,6 +47,13 @@ cars$speed + 5
 
 ```
 
+## Library Packages
+
+- install once
+- load each time
+- tour of the tidyverse loaded packages
+
+    - Use code below to introduce the idea of categorical data
 
 ```{r}
 library(tidyverse)
