--- a/exercise_00.Rmd
+++ b/exercise_00.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Exercise 0"
+output: html_notebook
 ---
 
 Goals:  
@@ -15,7 +16,7 @@ For the workshop, we've prebuilt a data set that has information about menus in 
 
 1. From the File menu, open a New R Notebook:  `File > New File > R Notebook`
 2. Add a code chunk at/around line 20.  (Hint: *Ctrl+Alt+I*)
-3. Load the `tidyverse` package.  In that code-chunk, type: `library(tidyverse)` and **run the code chunk**.
+3. Load the `tidyverse` library package in that code-chunk.  Run that code chunk
 4. Insert another new code chunks and follow the steps in below.
 
 
