--- a/exercise_01.Rmd
+++ b/exercise_01.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Exercise 01 - dplyr -- data wrangling"
+output: html_notebook
 ---
 
 ## Goals:  
@@ -20,18 +21,14 @@ In this exercise you'll practice the `dplyr` verbs (i.e. *functions*) mentioned 
 
 We've prebuilt a data set that has information about menus in Duke's Brodhead Center (dining hall) from three restaurants.  Create a new R Notebook, load the *tidyverse* package, and **load the dining hall dataset**, *as a tibble*.  The broadhead dataset is a CSV file in the `data` directory.
 
-1. From the File menu, open a New R Notebook:  `File > New File > R Notebook`
-2. Reading the preloaded directions in your new script, add a code chunk at/around line 20.  (Hint: *Ctrl+Alt+I*)
-3. Load the `tidyverse` package.  In that code-chunk, type: `library(tidyverse)` and **run the code chunk**.
-4. Insert a code chunk and load the practice data from the `data` directory:  
 
-    - Remember to assign the imported data to an object name, e.g. "brodhead"
+a. Add a code chunk and Load the `tidyverse` library package
+b. Insert a code chunk and import (`read_csv()`) the brodhead practice data from the `data` directory.  Assign the imported data to an object name, e.g. "brodhead"
     
-**After loading a library package and importing data from above**
-    
+
 Now you are ready to make new code chunks and follow the steps in Exercise 1 (below).
 
-> Remember:  Answers can be found in the answer_01.Rmd file
+> Answers can be found in the answer_01.Rmd file
 
 
 ### Exercise:  Data Wrangling
@@ -50,7 +47,7 @@ All of the following questions are based on the sample of restaurants represente
     
 ## Answers
 
-See [the answers](answers.Rmd) to the above section
+> Answers can be found in the answer_01.Rmd file
 
 ## Quiz
 
