--- a/03_large_data.Rmd
+++ b/03_large_data.Rmd
@@ -2,6 +2,7 @@
 title: "Importing Large Datasets in R"
 author: "John Little"
 date:  "`r Sys.Date()`"
+output: html_notebook
 ---
 
 Data importing can be a time sink and a major bottleneck.  If your data are large, you'll want to import the data in the most efficient manner.  The table below give some guides lines for import, depending on the size of your data.
