--- a/urls_for_class.Rmd
+++ b/urls_for_class.Rmd
@@ -13,9 +13,9 @@ output: github_document
 
 ### Surveys / Questions
 
--	[Pre-Survey](https://forms.gle/2TFpaLbB6KSXGhsi9) 
--	[Questions DURING workshop](https://docs.google.com/document/d/1bToe1XxULs_VJYMXVBJ-Fk5AJRHVRyOxQ3PVnYVe3jg/edit?usp=sharing)
--	[Post Survey](https://forms.gle/eB6SeDbCFRTmR8tq6)
+- [Pre-survey](https://forms.gle/kdgTR9dFPz9KnuLr8)
+- [Questions DURING workshop](https://docs.google.com/document/d/1ByiMj64yTJjSOzx8-2NFIoIyL2ZRH73-KuqEnBtSCFw/edit?usp=sharing)
+- [Post-Survey](https://forms.gle/f4J221htDEsBKdp56)
 
 ### R Primers
 
@@ -39,10 +39,7 @@ output: github_document
 
 ### ROpenLabs
 
-Pre-survey:  <<>>
-Questions DURING the session:   
-	<<>>
-
+- [Meeting times](https://rfun.library.duke.edu/portfolio/r_open_labs/)
 - [GitHub ROpenLabs](https://github.com/libjohn/ropenlabs)
 -	[Master the Tidyverse](https://github.com/rstudio/master-the-tidyverse)
 
